<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <include
        layout="@layout/toolbar" />

    <include layout="@layout/content_main" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorGray"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="@color/colorPrimaryDark"
        fab:menu_labels_textSize="16sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="@android:color/transparent"
        fab:menu_labels_colorPressed="@android:color/transparent"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="false"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/file"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_file"
            app:fab_colorPressed="@color/colorGray"
            app:fab_colorNormal="@color/colorPrimary"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/text"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_text"
            android:visibility="gone"
            app:fab_colorPressed="@color/colorGray"
            app:fab_colorNormal="@color/colorPrimary" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/video"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_video"
            app:fab_colorPressed="@color/colorGray"
            app:fab_colorNormal="@color/colorPrimary" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/image"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_image"
            app:fab_colorPressed="@color/colorGray"
            app:fab_colorNormal="@color/colorPrimary" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_clipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/clipboard"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_clipboard"
            android:visibility="gone"
            app:fab_colorPressed="@color/colorGray"
            app:fab_colorNormal="@color/colorPrimary" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>